[gd_scene load_steps=2 format=3 uid="uid://crtva4iecvr22"]

[ext_resource type="Script" path="res://hydro/core/OceanEditor.gd" id="1"]

[node name="Panel" type="Panel"]
anchors_preset = 9
anchor_bottom = 1.0
script = ExtResource("1")

[node name="HFlowContainer" type="HFlowContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FreeLook" type="Label" parent="HFlowContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Free look mode - press 'Q' to edit"

[node name="EditMode" type="Label" parent="HFlowContainer"]
visible = false
layout_mode = 2
text = "Edit mode - press 'Q' to free look"

[node name="Settings" type="VBoxContainer" parent="HFlowContainer"]
layout_mode = 2

[node name="Seed" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/Seed"]
layout_mode = 2
text = "Seed"

[node name="LineEdit" type="LineEdit" parent="HFlowContainer/Settings/Seed"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "0"
caret_blink = true

[node name="Amplitude" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/Amplitude"]
layout_mode = 2
text = "Amplitude"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/Amplitude"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
value = 0.25

[node name="Wavelength" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/Wavelength"]
layout_mode = 2
text = "Wavelength"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/Wavelength"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 20.0
max_value = 128.0
step = 0.01
value = 60.0

[node name="Steepness" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/Steepness"]
layout_mode = 2
text = "Steepness"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/Steepness"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
value = 0.025

[node name="WindDirectionX" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/WindDirectionX"]
layout_mode = 2
text = "WindDirectionX"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/WindDirectionX"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.001
value = 1.0

[node name="WindDirectionY" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/WindDirectionY"]
layout_mode = 2
text = "WindDirectionY"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/WindDirectionY"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.001

[node name="WindAlign" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/WindAlign"]
layout_mode = 2
text = "WindAlign"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/WindAlign"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001

[node name="Speed" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/Speed"]
layout_mode = 2
text = "Speed"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/Speed"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 40.0
step = 0.001
value = 10.0

[node name="Noise" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/Noise"]
layout_mode = 2
text = "Noise Enabled"

[node name="CheckBox" type="CheckBox" parent="HFlowContainer/Settings/Noise"]
layout_mode = 2

[node name="NoiseAmp" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/NoiseAmp"]
layout_mode = 2
text = "Noise Amp"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/NoiseAmp"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
value = 0.28

[node name="NoiseFreq" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/NoiseFreq"]
layout_mode = 2
text = "Noise Freq"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/NoiseFreq"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.07

[node name="NoiseSpeed" type="HBoxContainer" parent="HFlowContainer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="HFlowContainer/Settings/NoiseSpeed"]
layout_mode = 2
text = "Noise Speed"

[node name="HSlider" type="HSlider" parent="HFlowContainer/Settings/NoiseSpeed"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5
